{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 90,
  "lineage": "4fb2d47f-684c-0636-d5cc-ca712ff4e2a9",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "gz-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/publicIPAddresses/gz-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "gz-pip",
            "resource_group_name": "gzeru_rg",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "gz-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/networkInterfaces/gz-nic",
            "internal_domain_name_suffix": "2skzocqh114ulhiwjyjndtewsg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/publicIPAddresses/gz-pip",
                "subnet_id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/virtualNetworks/gz-network/subnets/gz-subnet"
              }
            ],
            "location": "westeurope",
            "name": "gz-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "gzeru_rg",
            "tags": {
              "enviroment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.gz-ip",
            "azurerm_resource_group.gzeru_rg",
            "azurerm_subnet.gz-subnet",
            "azurerm_virtual_network.gz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gz-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/networkSecurityGroups/gz-sg",
            "location": "westeurope",
            "name": "gz-sg",
            "resource_group_name": "gzeru_rg",
            "security_rule": [],
            "tags": {
              "enviroment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.gzeru_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "gz-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/networkSecurityGroups/gz-sg/securityRules/gz-dev-rule",
            "name": "gz-dev-rule",
            "network_security_group_name": "gz-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "gzeru_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.gz-sg",
            "azurerm_resource_group.gzeru_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gz-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/publicIPAddresses/gz-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "gz-pip",
            "resource_group_name": "gzeru_rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.gzeru_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gz-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/virtualNetworks/gz-network/subnets/gz-subnet",
            "name": "gz-subnet",
            "resource_group_name": "gzeru_rg",
            "virtual_network_name": "gz-network"
          },
          "dependencies": [
            "azurerm_resource_group.gzeru_rg",
            "azurerm_virtual_network.gz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "gz-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/virtualNetworks/gz-network/subnets/gz-subnet",
            "network_security_group_id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/networkSecurityGroups/gz-sg",
            "subnet_id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/virtualNetworks/gz-network/subnets/gz-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.gz-sg",
            "azurerm_resource_group.gzeru_rg",
            "azurerm_subnet.gz-subnet",
            "azurerm_virtual_network.gz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "gz-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0a9795e4-de07-45fd-9d16-4e12d1cc9696",
            "id": "/subscriptions/9470ff04-09b3-43e2-bbbb-c2464e97d36e/resourceGroups/gzeru_rg/providers/Microsoft.Network/virtualNetworks/gz-network",
            "location": "westeurope",
            "name": "gz-network",
            "resource_group_name": "gzeru_rg",
            "tags": {
              "enviroment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.gzeru_rg"
          ]
        }
      ]
    }
  ]
}